@@ -283,12 +283,18 @@ condition|)
 block|{
 name|str
 operator|=
+operator|new
 name|MessageFormat
-operator|.
-name|format
 argument_list|(
 name|str
 argument_list|,
+name|Locale
+operator|.
+name|ROOT
+argument_list|)
+operator|.
+name|format
+argument_list|(
 name|args
 argument_list|)
 expr_stmt|;
