@@ -284,6 +284,22 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|StrUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|handler
 operator|.
 name|dataimport
@@ -1822,9 +1838,9 @@ decl_stmt|;
 name|String
 name|rootEntity
 init|=
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|rootEntityTemplate
 argument_list|,
@@ -1842,9 +1858,9 @@ decl_stmt|;
 name|String
 name|config
 init|=
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|dataConfigTemplate
 argument_list|,
@@ -2326,9 +2342,9 @@ decl_stmt|;
 name|String
 name|child
 init|=
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|childEntityTemplate
 argument_list|,
