@@ -478,6 +478,22 @@ name|common
 operator|.
 name|util
 operator|.
+name|StrUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
 name|URLUtil
 import|;
 end_import
@@ -12093,9 +12109,9 @@ name|log
 operator|.
 name|info
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|errMsg
 argument_list|,
@@ -12113,9 +12129,9 @@ name|ErrorCode
 operator|.
 name|CONFLICT
 argument_list|,
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|errMsg
 argument_list|,
@@ -12190,9 +12206,9 @@ name|log
 operator|.
 name|info
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|errMsg
 operator|+
@@ -12214,9 +12230,9 @@ name|ErrorCode
 operator|.
 name|CONFLICT
 argument_list|,
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|errMsg
 argument_list|,
