@@ -466,18 +466,6 @@ begin_import
 import|import static
 name|java
 operator|.
-name|text
-operator|.
-name|MessageFormat
-operator|.
-name|format
-import|;
-end_import
-
-begin_import
-import|import static
-name|java
-operator|.
 name|util
 operator|.
 name|Collections
@@ -1933,9 +1921,9 @@ name|op
 operator|.
 name|addError
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|"can't delete . No such params ''{0}'' exist"
 argument_list|,
@@ -2215,9 +2203,9 @@ name|op
 operator|.
 name|addError
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|"Unknown operation ''{0}'' "
 argument_list|,
@@ -2338,9 +2326,9 @@ name|op
 operator|.
 name|addError
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|"Unknown operation ''{0}'' "
 argument_list|,
@@ -2577,9 +2565,9 @@ name|op
 operator|.
 name|addError
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|"NO such {0} ''{1}'' "
 argument_list|,
@@ -2738,9 +2726,9 @@ name|op
 operator|.
 name|addError
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|" ''{0}'' already exists . Do an ''{1}'' , if you want to change it "
 argument_list|,
@@ -2813,9 +2801,9 @@ name|op
 operator|.
 name|addError
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|" ''{0}'' does not exist . Do an ''{1}'' , if you want to create it "
 argument_list|,
@@ -3093,7 +3081,9 @@ name|op
 operator|.
 name|addError
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"No such property ''{0}''"
 argument_list|,
@@ -3183,7 +3173,9 @@ name|op
 operator|.
 name|addError
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 name|NOT_EDITABLE
 argument_list|,
@@ -3297,7 +3289,9 @@ name|op
 operator|.
 name|addError
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 name|NOT_EDITABLE
 argument_list|,
@@ -3410,9 +3404,9 @@ continue|continue;
 else|else
 block|{
 return|return
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|"''{0}'' name should only have chars [a-zA-Z_-.0-9] "
 argument_list|,
