@@ -140,6 +140,22 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|StrUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|noggit
 operator|.
 name|JSONParser
@@ -361,9 +377,9 @@ return|;
 block|}
 name|addError
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|"The command ''{0}'' should have the values as a json object {key:val} format"
 argument_list|,
@@ -395,9 +411,9 @@ name|errors
 operator|.
 name|add
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|"The value has to be a string for command : ''{0}'' "
 argument_list|,
@@ -529,9 +545,9 @@ name|errors
 operator|.
 name|add
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|REQD
 argument_list|,
@@ -724,9 +740,9 @@ name|errors
 operator|.
 name|add
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|REQD
 argument_list|,
@@ -770,9 +786,9 @@ name|errors
 operator|.
 name|add
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 name|REQD
 argument_list|,
@@ -1258,9 +1274,9 @@ condition|)
 block|{
 name|addError
 argument_list|(
-name|MessageFormat
+name|StrUtils
 operator|.
-name|format
+name|formatString
 argument_list|(
 literal|"''{0}'' must be a map"
 argument_list|,
