@@ -18,18 +18,6 @@ end_comment
 
 begin_import
 import|import static
-name|java
-operator|.
-name|text
-operator|.
-name|MessageFormat
-operator|.
-name|format
-import|;
-end_import
-
-begin_import
-import|import static
 name|org
 operator|.
 name|apache
@@ -221,6 +209,22 @@ operator|.
 name|cloud
 operator|.
 name|ZkStateReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|StrUtils
 import|;
 end_import
 
@@ -1005,7 +1009,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"field {0} not created"
 argument_list|,
@@ -1034,7 +1040,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"dynamic field {0} not created"
 argument_list|,
@@ -1068,7 +1076,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"CopyField source={0},dest={1} not created"
 argument_list|,
@@ -1099,7 +1109,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"new type {0}  not created"
 argument_list|,
@@ -1457,7 +1469,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"field {0} no longer present"
 argument_list|,
@@ -1486,7 +1500,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"dynamic field {0} no longer present"
 argument_list|,
@@ -1520,7 +1536,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"CopyField source={0},dest={1} no longer present"
 argument_list|,
@@ -1551,7 +1569,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"new type {0} no longer present"
 argument_list|,
@@ -1902,7 +1922,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"field {0} still exists"
 argument_list|,
@@ -1931,7 +1953,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"dynamic field {0} still exists"
 argument_list|,
@@ -1964,7 +1988,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"CopyField source={0},dest={1} still exists"
 argument_list|,
@@ -1995,7 +2021,9 @@ name|errmessages
 operator|.
 name|add
 argument_list|(
-name|format
+name|StrUtils
+operator|.
+name|formatString
 argument_list|(
 literal|"new type {0} still exists"
 argument_list|,
