@@ -22,6 +22,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|text
+operator|.
+name|MessageFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|List
@@ -1517,6 +1527,37 @@ name|ch
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|formatString
+specifier|public
+specifier|static
+name|String
+name|formatString
+parameter_list|(
+name|String
+name|pattern
+parameter_list|,
+name|Object
+modifier|...
+name|args
+parameter_list|)
+block|{
+return|return
+operator|new
+name|MessageFormat
+argument_list|(
+name|pattern
+argument_list|,
+name|Locale
+operator|.
+name|ROOT
+argument_list|)
+operator|.
+name|format
+argument_list|(
+name|args
+argument_list|)
+return|;
 block|}
 block|}
 end_class
